feat(redesign landing): redesign landing page to remove interactive items and give more info

--- a/src/layouts/partials/footer.pug
+++ b/src/layouts/partials/footer.pug
@@ -14,6 +14,7 @@ footer.footer
                             a(href='/docs') Docs
                         li
                             a(href='https://status.checklyhq.com/' target='_blank') Live dashboard
+                            span.green-dot
 
             .col-sm-2
                 .mb-3.mb-md-0
