--- a/src/layouts/partials/hero-section.pug
+++ b/src/layouts/partials/hero-section.pug
@@ -1,14 +1,13 @@
 section.hero-section
   .container
     .row
+      .col-sm-12.col-md-10.offset-md-1.text-center
+        h1.hero-text A better way to monitor your API's and site click flows
       .col-sm-12.col-md-8.offset-md-2.text-center
-        h1.hero-text Active monitoring <br> for dev and ops teams
-        h2.hero-sub
-          | Checkly is the easiest way to actively monitor your API endpoints and Browser click flow
-          | from a single dashboard.
-        a.btn.btn-success.btn-lg(href='https://app.checklyhq.com/signup') Start your free trial
-        .text-center.pt-2.text-muted.mb-4
-          small up in seconds, no credit card required
+        h2.hero-sub.mb-3
+          | Seamlessly monitor the performance and correctnes of your API endpoints and vital site transactions from a single dashboard.
+        .mb-4
+          a.btn.btn-success.btn-lg(href='https://app.checklyhq.com/signup') Start your free trial
     .row
       .col-sm-12.text-center
           img.hero-image.img-fluid(src='/images/dashboard-screen@2x.png')
