--- a/src/layouts/partials/navbar.pug
+++ b/src/layouts/partials/navbar.pug
@@ -6,17 +6,15 @@ nav.navbar.navbar-toggleable-md.fixed-top
           span
         a.navbar-brand(href='/')
           img(src='/images/text_racoon_logo.svg', width='120')
-          p.beta beta!
         #navbarSupportedContent.collapse.navbar-collapse
           ul.navbar-nav.ml-auto
             li.nav-item
               a.nav-link(href='/pricing') Pricing
             li.nav-item
+              a.nav-link(href='https://status.checklyhq.com/' target='_blank') Live dashboard
+                span.green-dot
+            li.nav-item
               a.nav-link(href='/docs') Docs
-            li.nav-item
-                a.nav-link(href='https://status.checklyhq.com/' target='_blank') Live dashboard
-            li.nav-item
-              a.nav-link(href='/whats-new') What's new
           form.form-inline.my-2.my-lg-0.ml-md-3
             a.btn.btn-outline-secondary.my-2.my-sm-0.mr-3.ml-md-3(href='https://app.checklyhq.com/') Log in
             a.btn.btn-success.my-2.my-sm-0(href='https://app.checklyhq.com/signup') Start your free trial
