--- a/src/layouts/pricing/list.pug
+++ b/src/layouts/pricing/list.pug
@@ -8,9 +8,7 @@ body
                     .col-sm-12.col-md-8.offset-md-2.plans-header.text-center.mb-4
                         h2 Simple, fair pricing 🍍
                         p.py-4
-                            | Checkly has plans for companies at any level, from small startups to corporates. Didn't
-                            | find a plan that matches your needs? Just <a href="mailto:info@checklyhq.com">send an email</a> and we'll cook
-                            | up something tailor made.
+                            | Checkly has plans for companies at any level, from small startups to corporates.
                 .row
                     .col-sm-4
                         .card.p-3.mb-3.mb-md-0.card-starter
