--- a/site/layouts/maintenance/list.html
+++ b/site/layouts/maintenance/list.html
@@ -1,4 +1,99 @@
-<!DOCTYPE html><html lang="en"><head><title>{{ if .IsHome }}{{ .Site.Title }}{{ else }}{{ .Title }} | Checkly {{ end }}</title><meta charset="utf-8"><meta name="description" content="{{.Description | default .Site.Params.Description}}"><meta name="viewport" content="width=device-width" initial-scale="1" maximum-scale="1"><meta property="og:type" content="article"><meta property="og:title" content="{{ if .IsHome }}{{ .Site.Title }}{{ else }}{{ .Title }} | Checkly {{ end }}"><meta property="og:description" content="{{.Description | default .Site.Params.Description}}"><meta property="og:image" content="https://checklyhq.com/images/dashboard-screen@2x.png"><meta property="twitter:card" content="summary"><meta property="twitter:title" content="{{ if .IsHome }}{{ .Site.Title }}{{ else }}{{ .Title }} | Checkly {{ end }}"><meta property="twitter:description" content="{{.Description | default .Site.Params.Description}}"><meta property="twitter:image" content="https://checklyhq.com/images/dashboard-screen@2x.png"><link rel="icon" type="image/png" href="/images/racoon_favicon.png"><link rel="alternate" href="https://checklyhq.com" hreflang="en-us"><link rel="canonical" href="https://checklyhq.com"><!-- main styles--><link rel="stylesheet" href="/css/style.css"><!-- Global site tag (gtag.js) - Google Analytics--><script async src="https://www.googletagmanager.com/gtag/js?id=UA-110523681-1"></script><script>  window.dataLayer = window.dataLayer || [];
+<!DOCTYPE html><html lang="en"><head><title>{{ if .IsHome }}{{ .Site.Title }}{{ else }}{{ .Title }} | Checkly {{ end }}</title><meta charset="utf-8"><meta name="description" content="{{.Description | default .Site.Params.Description}}"><meta name="viewport" content="width=device-width" initial-scale="1" maximum-scale="1"><meta property="og:type" content="article"><meta property="og:title" content="{{ if .IsHome }}{{ .Site.Title }}{{ else }}{{ .Title }} | Checkly {{ end }}"><meta property="og:description" content="{{.Description | default .Site.Params.Description}}"><meta property="og:image" content="https://checklyhq.com/images/dashboard-screen@2x.png"><meta property="twitter:card" content="summary"><meta property="twitter:title" content="{{ if .IsHome }}{{ .Site.Title }}{{ else }}{{ .Title }} | Checkly {{ end }}"><meta property="twitter:description" content="{{.Description | default .Site.Params.Description}}"><meta property="twitter:image" content="https://checklyhq.com/images/dashboard-screen@2x.png"><link rel="icon" type="image/png" href="/images/racoon_favicon.png"><link rel="alternate" href="https://checklyhq.com" hreflang="en-us"><link rel="canonical" href="https://checklyhq.com"><!-- main styles--><link rel="stylesheet" href="/css/style.css"><!-- Quantcast Choice. Consent Manager Tag--><script type="text/javascript" async>var elem = document.createElement('script');
+elem.src = 'https://quantcast.mgr.consensu.org/cmp.js';
+elem.async = true;
+elem.type = "text/javascript";
+var scpt = document.getElementsByTagName('script')[0];
+scpt.parentNode.insertBefore(elem, scpt);
+(function() {
+var gdprAppliesGlobally = false;
+function addFrame() {
+  if (!window.frames['__cmpLocator']) {
+  if (document.body) {
+    var body = document.body,
+    iframe = document.createElement('iframe');
+    iframe.style = 'display:none';
+    iframe.name = '__cmpLocator';
+    body.appendChild(iframe);
+} else {
+// In the case where this stub is located in the head,
+// this allows us to inject the iframe more quickly than
+// relying on DOMContentLoaded or other events.
+setTimeout(addFrame, 5);
+}
+}
+}
+addFrame();
+function cmpMsgHandler(event) {
+  var msgIsString = typeof event.data === "string";
+  var json;
+  if(msgIsString) {
+json = event.data.indexOf("__cmpCall") != -1 ? JSON.parse(event.data) : {};
+} else {
+json = event.data;
+}
+if (json.__cmpCall) {
+var i = json.__cmpCall;
+window.__cmp(i.command, i.parameter, function(retValue, success) {
+var returnMsg = {"__cmpReturn": {
+"returnValue": retValue,
+"success": success,
+"callId": i.callId
+}};
+event.source.postMessage(msgIsString ?
+JSON.stringify(returnMsg) : returnMsg, '*');
+});
+}
+}
+window.__cmp = function (c) {
+  var b = arguments;
+  if (!b.length) {
+  return __cmp.a;
+}
+else if (b[0] === 'ping') {
+b[2]({"gdprAppliesGlobally": gdprAppliesGlobally,
+"cmpLoaded": false}, true);
+} else if (c == '__cmp')
+return false;
+else {
+if (typeof __cmp.a === 'undefined') {
+  __cmp.a = [];
+}
+__cmp.a.push([].slice.apply(b));
+}
+}
+window.__cmp.gdprAppliesGlobally = gdprAppliesGlobally;
+window.__cmp.msgHandler = cmpMsgHandler;
+if (window.addEventListener) {
+  window.addEventListener('message', cmpMsgHandler, false);
+}
+else {
+window.attachEvent('onmessage', cmpMsgHandler);
+}
+})();
+window.__cmp('init', {
+'Language': 'en',
+'Initial Screen Reject Button Text': 'I do not accept',
+'Initial Screen Accept Button Text': 'I accept',
+'Purpose Screen Body Text': 'You can set your consent preferences and determine how you want your data to be used based on the purposes below. You may set your preferences for us independently from those of third-party partners. Each purpose has a description so that you know how we and partners use your data.',
+'Vendor Screen Body Text': 'You can set consent preferences for each individual third-party company below. Expand each company list item to see what purposes they use data for to help make your choices. In some cases, companies may disclose that they use your data without asking for your consent, based on their legitimate interests. You can click on their privacy policies for more information and to opt out.',
+'Vendor Screen Accept All Button Text': 'Accept all',
+'Vendor Screen Reject All Button Text': 'Reject all',
+'Initial Screen Body Text': 'We and our partners use technology such as cookies on our site to personalise content and ads, provide social media features, and analyse our traffic. Click below to consent to the use of this technology across the web. You can change your mind and change your consent choices at anytime by returning to this site.',
+'Initial Screen Body Text Option': 1,
+'Publisher Name': 'Checkly',
+'Publisher Purpose IDs': [2,5],
+'Post Consent Page': 'https://google.com',
+'Consent Scope': 'service',
+'UI Layout': 'banner',
+});<!-- End Quantcast Choice. Consent Manager Tag--></script><style>.qc-cmp-ui {
+  background-color: #45c8f1 !important;
+}
+.qc-cmp-publisher-purposes-table .qc-cmp-table-header {
+  background-color: #fafafa !important;
+}
+.qc-cmp-publisher-purposes-table .qc-cmp-table-row {
+  background-color: #ffffff !important;
+}</style><!-- Global site tag (gtag.js) - Google Analytics--><script async src="https://www.googletagmanager.com/gtag/js?id=UA-110523681-1"></script><script>  window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
   gtag('config', 'UA-110523681-1');</script><!-- Drift code--><script>if (location.host === 'checklyhq.com') {
@@ -27,4 +122,4 @@ drift.load('7bxit3egu3zv')
 }</script><!-- Heap tracking code--><script>if (location.host === 'checklyhq.com') {
   window.heap=window.heap||[],heap.load=function(e,t){window.heap.appid=e,window.heap.config=t=t||{};var r=t.forceSSL||"https:"===document.location.protocol,a=document.createElement("script");a.type="text/javascript",a.async=!0,a.src=(r?"https:":"http:")+"//cdn.heapanalytics.com/js/heap-"+e+".js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(a,n);for(var o=function(e){return function(){heap.push([e].concat(Array.prototype.slice.call(arguments,0)))}},p=["addEventProperties","addUserProperties","clearEventProperties","identify","removeEventProperty","setEventProperties","track","unsetEventProperty"],c=0;c<p.length;c++)heap[p[c]]=o(p[c])};
   heap.load("3553865455");
-}</script></head></html><body><nav class="navbar navbar-toggleable-md fixed-top"><div class="container"><button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"><span></span><span></span><span></span></button><a class="navbar-brand" href="/"><img src="/images/text_racoon_logo.svg" width="120"><p class="beta">beta!</p></a><div class="collapse navbar-collapse" id="navbarSupportedContent"><ul class="navbar-nav ml-auto"><li class="nav-item"><a class="nav-link" href="/pricing">Pricing</a></li><li class="nav-item"><a class="nav-link" href="/docs">Docs</a></li><li class="nav-item"><a class="nav-link" href="https://status.checklyhq.com/" target="_blank">Live dashboard</a></li><li class="nav-item"><a class="nav-link" href="/whats-new">What's new</a></li></ul><form class="form-inline my-2 my-lg-0 ml-md-3"><a class="btn btn-outline-secondary my-2 my-sm-0 mr-3 ml-md-3" href="https://app.checklyhq.com/">Log in</a><a class="btn btn-success my-2 my-sm-0" href="https://app.checklyhq.com/signup">Start your free trial</a></form></div></div></nav><div class="main"><div class="container"><div class="row"><div class="col-sm-12 text-center py-5"><span>{{.Content}}</span></div></div></div></div><footer class="footer"><div class="container"><div class="row footer-top"><div class="col-sm-2"><div class="mb-3 mb-md-0"><img src="/images/text_racoon_logo.svg" width="100px"></div></div><div class="col-sm-2"><div class="mb-3 mb-md-0"><h6>Product</h6><ul><li><a href="/pricing">Pricing</a></li><li><a href="/docs">Docs</a></li><li><a href="https://status.checklyhq.com/" target="_blank">Live dashboard</a></li></ul></div></div><div class="col-sm-2"><div class="mb-3 mb-md-0"><h6>Company</h6><ul><li><a href="/whats-new">News</a></li><li><a href="/support">Support</a></li><li><a href="/privacy">Privacy policy</a></li></ul></div></div><div class="col-sm-6"><h6>Get on topic product info and updates</h6><div id="mc_embed_signup"><form class="form-inline validate" action="https://run.us15.list-manage.com/subscribe/post?u=9af9712f622c6511cb2113669&amp;amp;id=adb061483c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" novalidate><input class="form-control email-address-input mb-3 mb-md-0 mr-md-2" type="email" value="" name="EMAIL" width="280px" id="mce-EMAIL" placeholder="Email address"><button class="btn btn-primary submit-button button" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe">Subscribe</button><div class="clear" id="mce-responses"><div class="response" id="mce-error-response" style="display:none;"></div><div class="response" id="mce-success-response" style="display:none;"></div></div><div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_9af9712f622c6511cb2113669_adb061483c" tabindex="-1" value=""></div></form></div><div class="pt-2 text-muted"><small>no spam - unsubscribe anytime</small></div></div></div><div class="row footer-bottom"><div class="col-12"><span>Checkly · Paul-Lincke-Ufer 30, 10999, Berlin · Copyright © 2018</span><div class="float-right"><a class="mr-3" href="https://heapanalytics.com/?utm_source=badge" rel="nofollow"><img style="width:108px;height:41px;" src="//heapanalytics.com/img/badgeLight.png" alt="Heap | Mobile and Web Analytics"></a><a href="https://twitter.com/checklyhq" target="_blank"><img src="/images/twitter.svg"></a></div></div></div></div></footer><!-- main scripts--><script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script><script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script><script src="/js/index.js"></script><div>{{ if .IsHome }}<script src="/js/app.js"></script>{{end}}</div></body>
+}</script></head></html><body><nav class="navbar navbar-toggleable-md fixed-top"><div class="container"><button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"><span></span><span></span><span></span></button><a class="navbar-brand" href="/"><img src="/images/text_racoon_logo.svg" width="120"></a><div class="collapse navbar-collapse" id="navbarSupportedContent"><ul class="navbar-nav ml-auto"><li class="nav-item"><a class="nav-link" href="/pricing">Pricing</a></li><li class="nav-item"><a class="nav-link" href="https://status.checklyhq.com/" target="_blank">Live dashboard<span class="green-dot"></span></a></li><li class="nav-item"><a class="nav-link" href="/docs">Docs</a></li></ul><form class="form-inline my-2 my-lg-0 ml-md-3"><a class="btn btn-outline-secondary my-2 my-sm-0 mr-3 ml-md-3" href="https://app.checklyhq.com/">Log in</a><a class="btn btn-success my-2 my-sm-0" href="https://app.checklyhq.com/signup">Start your free trial</a></form></div></div></nav><div class="main"><div class="container"><div class="row"><div class="col-sm-12 text-center py-5"><span>{{.Content}}</span></div></div></div></div><footer class="footer"><div class="container"><div class="row footer-top"><div class="col-sm-2"><div class="mb-3 mb-md-0"><img src="/images/text_racoon_logo.svg" width="100px"></div></div><div class="col-sm-2"><div class="mb-3 mb-md-0"><h6>Product</h6><ul><li><a href="/pricing">Pricing</a></li><li><a href="/docs">Docs</a></li><li><a href="https://status.checklyhq.com/" target="_blank">Live dashboard</a><span class="green-dot"></span></li></ul></div></div><div class="col-sm-2"><div class="mb-3 mb-md-0"><h6>Company</h6><ul><li><a href="/whats-new">News</a></li><li><a href="/support">Support</a></li><li><a href="/privacy">Privacy policy</a></li></ul></div></div><div class="col-sm-6"><h6>Get on topic product info and updates</h6><div id="mc_embed_signup"><form class="form-inline validate" action="https://run.us15.list-manage.com/subscribe/post?u=9af9712f622c6511cb2113669&amp;amp;id=adb061483c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" novalidate><input class="form-control email-address-input mb-3 mb-md-0 mr-md-2" type="email" value="" name="EMAIL" width="280px" id="mce-EMAIL" placeholder="Email address"><button class="btn btn-primary submit-button button" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe">Subscribe</button><div class="clear" id="mce-responses"><div class="response" id="mce-error-response" style="display:none;"></div><div class="response" id="mce-success-response" style="display:none;"></div></div><div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_9af9712f622c6511cb2113669_adb061483c" tabindex="-1" value=""></div></form></div><div class="pt-2 text-muted"><small>no spam - unsubscribe anytime</small></div></div></div><div class="row footer-bottom"><div class="col-12"><span>Checkly · Paul-Lincke-Ufer 30, 10999, Berlin · Copyright © 2018</span><div class="float-right"><a class="mr-3" href="https://heapanalytics.com/?utm_source=badge" rel="nofollow"><img style="width:108px;height:41px;" src="//heapanalytics.com/img/badgeLight.png" alt="Heap | Mobile and Web Analytics"></a><a href="https://twitter.com/checklyhq" target="_blank"><img src="/images/twitter.svg"></a></div></div></div></div></footer><!-- main scripts--><script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script><script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script><script src="/js/index.js"></script></body>
