--- a/src/layouts/index.pug
+++ b/src/layouts/index.pug
@@ -4,9 +4,11 @@ body
     .main
         #landing.landing
             include partials/hero-section.pug
-            include partials/browser-check-section.pug
-            include partials/api-check-section.pug
-            include partials/features-section.pug
+            include partials/api-monitoring-section.pug
+            include partials/site-monitoring-section.pug
+            include partials/alerting-section.pug
+            include partials/results-section.pug
             include partials/testimonial-trial-row.pug
+            include partials/all-features.pug
             include partials/public-stats-section.pug
     include partials/footer.pug
