--- a/src/layouts/partials/testimonial-trial-row.pug
+++ b/src/layouts/partials/testimonial-trial-row.pug
@@ -1,8 +1,8 @@
-section.testimonial.testimonial-1
+section.testimonial-section.testimonial-1
     .container
         .row
-            .col-sm-4
-                .card.testimonial-card.big-drop-shadow
+            .col-sm-4.col-md-5.col-lg-4
+                .card.testimonial-card.big-drop-shadow.mb-5.mb-md-0
                     .card-block
                         a(href='http://www.insiteintelligence.com/', target='_blank')
                             img.testimonial-logo(src='/images/testimonials/insite_logo.png')
@@ -14,7 +14,7 @@ section.testimonial.testimonial-1
                         .testimonial-name-badge
                             .text-muted.font-weight-bold Daniel Schleig
                             .text-muted IT & Systems Lead, insiteintelligence.com
-            .col-sm-8
+            .col-sm-8.col-md-7.col-lg-8
                 .text-left.p-4
                     h2.section-header.pt-4 Try it out for free for 30 days 🍍
                     p.lead-text Start actively monitoring your API endpoints and browser click flows today.
