--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -35,7 +35,17 @@
     }
   }
 
+  &.navbar-toggleable-md .navbar-nav .nav-link {
+    padding-right: 1rem;
+    padding-left: 1rem;
+  }
+
   @include media-breakpoint-down(sm) {
+    &.navbar-toggleable-md .navbar-nav .nav-link {
+      padding-left: 0;
+      padding-right: 0;
+    }
+
     &.navbar-toggleable-md > .container {
       margin-left: 0;
       margin-right: 0;
@@ -44,7 +54,7 @@
 
   .nav-link {
     color: $gray;
-    font-weight: 400;
+    font-weight: 300;
     &:hover {
       color: $gray-dark;
     }
