--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -18,6 +18,7 @@
 @import 'markdown';
 @import 'status-circle';
 @import 'syntax';
+@import 'blog';
 
 @import 'sections/hero';
 @import 'sections/api-monitoring';
