--- a/src/layouts/docs/single.pug
+++ b/src/layouts/docs/single.pug
@@ -32,5 +32,5 @@ body
                         h1 #{'{{ .Title }}'}
                         span #{'{{.Content}}'}
                     hr.my-4
-                    p Last updated on #{'{{.Page.Lastmod.Format '} "January 2, 2006" #{' }}'}
-    include ../partials/footer.pug
+                    include ../partials/last-updated.pug
+include ../partials/footer.pug
