feat(sms): adds sms features

--- a/src/layouts/partials/api-monitoring-section.pug
+++ b/src/layouts/partials/api-monitoring-section.pug
@@ -7,11 +7,11 @@ section.api-monitoring-section
           h2.section-header No more broken API's
           p.lead-text
             | Make sure your API endpoints are always responding quickly and with the correct payload. Get started quickly
-            | with our Swagger / OpenAPI importer and super easy API check creator.
+            | with our Swagger or cURL importer and super easy API check creator.
             | <br><br>
             | Run your checks from up to 8 locations on the world, as often as once every minute. And we'll also check if
             | your SSL certificate is about to expire.
-          a.cta-link(href='/docs/api-checks') Learn more
+          a.cta-link(href='/docs/api-checks/request-settings/') Learn more
       .col-sm-6.offset-sm-1
         .image-side.right
           img.screen-image.big-landing-image.assertions.fade-in.ml-md-5.lazy(src='/landing/api-assertions@2x.png')
