--- a/src/layouts/partials/alerting-section.pug
+++ b/src/layouts/partials/alerting-section.pug
@@ -6,8 +6,8 @@ section.alerting-section
         h2.section-header Alerting without limits
       .col-sm-12.col-md-8.offset-md-2.text-center
         p.lead-text
-          | Checkly gives you flexible options for how, why and when you want to be alerted. Keep your team up
-          | to date with unimited email, Slack and web hook notifications. "double-checking" is enabled by default to never get false positives.
+          | Keep your team up to date with a generous helping of SMS messages and unlimited email, Slack and web hook
+          | notifications. Of course, "double-checking" is enabled by default to never get false positives.
         a.cta-link(href='/docs/alerting') Learn more
         .mb-4.mb-lg-0
     .row
