--- a/src/layouts/partials/all-features.pug
+++ b/src/layouts/partials/all-features.pug
@@ -9,7 +9,7 @@ section.all-features-section
         p Flexible API monitoring with custom body, headers, query parameters and unlimited assertions.
       .col-sm-4
         h5 Click flow monitoring
-        p Scripted browser clicks flow using Chrome Puppeteer Node.js framework. Take up to three screenshots per check.
+        p Scripted browser clicks flow using Chrome Puppeteer Node.js framework. <a href='/docs/browser-checks/screenshots/' class="info-link">Take up to three screenshots</a> per check.
       .col-sm-4
         h5 SSL expiry checks
         p We'll alert you when your SSL certificate is about to expire up to 30 days in advance till D-day.
@@ -18,18 +18,18 @@ section.all-features-section
         h5 Global coverage
         p Get global latency metrics by running your checks from up to eight (more coming) data center locations around the world.
       .col-sm-4
-        h5 Unlimited alerts
-        p No limits on the amount alerts you can trigger per month, nor on the amount of recipients.
+        h5 SMS, email, web hook and Slack
+        p Generous SMS bundles & unlimited recipients / endpoints for email, web hook and Slack alerting integrations.
       .col-sm-4
-        h5 Email, web hook and Slack
-        p Checkly provides unlimited recipients / endpoints for email, web hook and Slack alerting integrations.
+        h5 Double check by default
+        p The internet can be glitchy. When a check fails, we always run it again just to be sure.
     .row
       .col-sm-4
         h5 Public dashboards
-        p Display a public dashboard on your site or in-office mounted TV, hosted on your company domain.
+        p Display a <a href='/docs/dashboards/' class="info-link">public dashboard</a> on your site or in-office mounted TV, hosted on your company domain.
       .col-sm-4
         h5 Teams & users
         p Add team members to your account to collaborate. Comes with full role based access control.
       .col-sm-4
         h5 On-demand triggers
-        p Trigger your checks using a simple cURL command from your CI/CD pipeline or just the command line.
+        p <a href='/docs/browser-checks/triggers/' class="info-link">Trigger your checks</a> using a simple cURL command from your CI/CD pipeline or just the command line.
