--- a/src/layouts/pricing/list.pug
+++ b/src/layouts/pricing/list.pug
@@ -66,10 +66,10 @@ body
                         .text-center
                             ul.list-inline.plans-features-common-list
                                 li.list-inline-item 8 regions
-                                li.list-inline-item 1 minute intervals for API checks / 5 minute intervals for Browser checks
+                                li.list-inline-item 1 minute resolution for API checks / 5 resolution for Browser checks
                                 li.list-inline-item 1 public dashboard with a custom domain
                                 li.list-inline-item SSL expiration checks
-                                li.list-inline-item Email, webhook and Slack integration
+                                li.list-inline-item SMS, email, webhook and Slack integration
                                 li.list-inline-item Weekly summary email
                 .row
                     .col-sm-12.text-center
