--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -22,8 +22,9 @@ p {
 
 .info-link {
   text-decoration: none;
-  border-bottom: 1px dotted;
-  margin-bottom: 3px;
+  border-bottom: 1px dashed;
+  padding-bottom: 2px;
+  color: inherit;
   &:hover {
     text-decoration: none;
   }
