--- a/src/layouts/partials/hero-section.pug
+++ b/src/layouts/partials/hero-section.pug
@@ -5,7 +5,7 @@ section.hero-section
         h1.hero-text A better way to monitor your API's and site click flows
       .col-sm-12.col-md-8.offset-md-2.text-center
         h2.hero-sub.mb-3
-          | Seamlessly monitor the performance and correctnes of your API endpoints and vital site transactions from a single dashboard.
+          | Seamlessly monitor the performance and correctness of your API endpoints and vital site transactions from a single dashboard.
         .mb-4
           a.btn.btn-success.btn-lg(href='https://app.checklyhq.com/signup') Start your free trial
     .row
