--- a/src/layouts/partials/alerting-section.pug
+++ b/src/layouts/partials/alerting-section.pug
@@ -6,7 +6,7 @@ section.alerting-section
         h2.section-header Alerting without limits
       .col-sm-12.col-md-8.offset-md-2.text-center
         p.lead-text
-          | Keep your team up to date with a generous helping of SMS messages and unlimited email, Slack and web hook
+          | Keep your team up to date with a generous helping of SMS messages and unlimited email, Pagerduty, Slack and web hook
           | notifications. Of course, "double-checking" is enabled by default to never get false positives.
         a.cta-link(href='/docs/alerting') Learn more
         .mb-4.mb-lg-0
