--- a/src/layouts/partials/all-features.pug
+++ b/src/layouts/partials/all-features.pug
@@ -18,8 +18,8 @@ section.all-features-section
         h5 Global coverage
         p Get global latency metrics by running your checks from up to eight (more coming) data center locations around the world.
       .col-sm-4
-        h5 SMS, email, web hook and Slack
-        p Generous SMS bundles & unlimited recipients / endpoints for email, web hook and Slack alerting integrations.
+        h5 Alerting channels
+        p Generous SMS bundles & unlimited recipients / endpoints for Pagerduty, email, web hook and Slack alerting integrations.
       .col-sm-4
         h5 Double check by default
         p The internet can be glitchy. When a check fails, we always run it again just to be sure.
