feat: updates blog

--- a/src/layouts/partials/navbar.pug
+++ b/src/layouts/partials/navbar.pug
@@ -15,8 +15,8 @@ nav.navbar.navbar-toggleable-md.fixed-top
                 span.green-dot
             li.nav-item
               a.nav-link(href='/docs') Docs
-            //li.nav-item
-            //  a.nav-link(href='/blog') Blog
+            li.nav-item
+              a.nav-link(href='/blog') Blog
           form.form-inline.my-2.my-lg-0.ml-md-3
             a.btn.btn-outline-secondary.my-2.my-sm-0.mr-3.ml-md-3(href='https://app.checklyhq.com/') Log in
             a.btn.btn-success.my-2.my-sm-0(href='https://app.checklyhq.com/signup') Start your free trial
