--- a/src/layouts/partials/footer.pug
+++ b/src/layouts/partials/footer.pug
@@ -22,8 +22,8 @@ footer.footer
                     ul
                         li
                             a(href='/whats-new') News
-                        //li
-                        //    a(href='/blog') Blog
+                        li
+                            a(href='/blog') Blog
                         li
                             a(href='/support') Support
                         li
