--- a/src/layouts/blog/list.pug
+++ b/src/layouts/blog/list.pug
@@ -18,4 +18,5 @@ body
                   a.btn.btn-primary.btn-sm(href="{{.RelPermalink }}") Read more
                 | !{'{{end}}'}
             | !{'{{end}}'}
+  script(type="text/javascript" src="https://s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5b5efec24db95a45")
   include ../partials/footer.pug
