--- a/src/layouts/blog/single.pug
+++ b/src/layouts/blog/single.pug
@@ -12,4 +12,5 @@ body
             .py-4
               include ../partials/social-share.pug
     include ../partials/free-trial-row.pug
+  script(type="text/javascript" src="https://s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5b5efec24db95a45")
   include ../partials/footer.pug
