--- a/src/layouts/blog/single.pug
+++ b/src/layouts/blog/single.pug
@@ -4,7 +4,7 @@ body
   .main.blog
     .container
       .row
-        .col-sm-12.col-md-8.offset-md-2
+        .col-smf-12.col-lg-8.offset-lg-2
           .blog-content.py-4
             include ../partials/blog-meta-data.pug
             h1.blog-header #{'{{ .Title }}'}
