--- a/src/layouts/partials/free-trial-row.pug
+++ b/src/layouts/partials/free-trial-row.pug
@@ -1,7 +1,7 @@
 section.free-trial-section
     .container
         .row
-            .col-sm-8.offset-sm-2
+            .col-sm-12.col-lg-8.offset-lg-2
                 .card
                     .card-block
                         .text-center
