feat: add commented out testimonial of bizmachine

--- a/src/layouts/partials/testimonial-trial-row.pug
+++ b/src/layouts/partials/testimonial-trial-row.pug
@@ -1,24 +1,40 @@
 section.testimonial-section.testimonial-1
-    .container
-        .row
-            .col-sm-4.col-md-5.col-lg-4
-                .card.testimonial-card.big-drop-shadow.mb-5.mb-md-0
-                    .card-block
-                        a(href='http://www.insiteintelligence.com/', target='_blank')
-                            img.testimonial-logo(src='/images/testimonials/insite_logo.png')
-                        p.testimonial-text
-                            | "Checkly makes it simple and easy for us to measure performance and automate the manual
-                            | tasks of ensuring our web-based platform is available for our customers."
-                        .testimonial-portrait
-                            img(src='/images/testimonials/insite_portrait.png')
-                        .testimonial-name-badge
-                            .text-muted.font-weight-bold Daniel Schleig
-                            .text-muted IT & Systems Lead, insiteintelligence.com
-            .col-sm-8.col-md-7.col-lg-8
-                .text-left.p-4
-                    h2.section-header.pt-4 Try it out for free for 30 days 🍍
-                    p.lead-text Start actively monitoring your API endpoints and browser click flows today.
-                    a.btn.btn-success.btn-lg(href='https://app.checklyhq.com/signup') Start your free trial
-                    .pt-2.text-muted.mb-4
-                        small no credit card required
+  .container
+    .row
+      .col-sm-4.col-md-5.col-lg-4
+        .card.testimonial-card.big-drop-shadow.mb-5.mb-md-0
+          .card-block
+            a(href='http://www.insiteintelligence.com/', target='_blank')
+              img.testimonial-logo(src='/images/testimonials/insite_logo.png')
+            p.testimonial-text
+              | "Checkly makes it simple and easy for us to measure performance and automate the manual
+              | tasks of ensuring our web-based platform is available for our customers."
+            .testimonial-portrait
+              img(src='/images/testimonials/insite_portrait.png')
+            .testimonial-name-badge
+              .text-muted.font-weight-bold Daniel Schleig
+              .text-muted IT & Systems Lead
+              a.text-muted(href='http://www.insiteintelligence.com/' target='_blank') insiteintelligence.com
+
+      //.col-sm-4.col-md-5.col-lg-4
+      //  .card.testimonial-card.big-drop-shadow.mb-5.mb-md-0
+      //    .card-block
+      //      a(href='https://www.bizmachine.com/', target='_blank')
+      //        img.testimonial-logo(src='/images/testimonials/bizmachine_logo.png')
+      //      p.testimonial-text
+      //        | "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+      //        | dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. "
+      //      .testimonial-portrait
+      //        img(src='/images/testimonials/bizmachine_portrait.png')
+      //      .testimonial-name-badge
+      //        .text-muted.font-weight-bold Lukáš Bauer
+      //        .text-muted Head of Technology
+      //        a.text-muted(href='https://www.bizmachine.com/' target='_blank') bizmachine.com
+      .col-sm-8.col-md-7.col-lg-8
+        .text-left.p-4
+          h2.section-header.pt-4 Try it out for free for 30 days 🍍
+          p.lead-text Start actively monitoring your API endpoints and browser click flows today.
+          a.btn.btn-success.btn-lg(href='https://app.checklyhq.com/signup') Start your free trial
+          .pt-2.text-muted.mb-4
+            small no credit card required
 
