--- a/src/layouts/partials/testimonial-trial-row.pug
+++ b/src/layouts/partials/testimonial-trial-row.pug
@@ -30,6 +30,20 @@ section.testimonial-section.testimonial-1
       //        .text-muted.font-weight-bold Lukáš Bauer
       //        .text-muted Head of Technology
       //        a.text-muted(href='https://www.bizmachine.com/' target='_blank') bizmachine.com
+      //.col-sm-4.col-md-5.col-lg-4
+      //  .card.testimonial-card.big-drop-shadow.mb-5.mb-md-0
+      //    .card-block
+      //      a(href='https://launchpotato.com/', target='_blank')
+      //        img.testimonial-logo(src='/images/testimonials/launchpotato_logo.png')
+      //      p.testimonial-text
+      //        | "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+      //        | dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. "
+      //      .testimonial-portrait
+      //        img(src='/images/testimonials/anonymous_logo.png')
+      //      .testimonial-name-badge
+      //        .text-muted.font-weight-bold Nick Caldwell
+      //        .text-muted Software Engineer
+      //        a.text-muted(href='https://launchpotato.com/' target='_blank') launchpotato.com
       .col-sm-8.col-md-7.col-lg-8
         .text-left.p-4
           h2.section-header.pt-4 Try it out for free for 30 days 🍍
