feat: adds ghibli gif on 404

--- a/src/layouts/404.pug
+++ b/src/layouts/404.pug
@@ -5,6 +5,9 @@ body
         .container
             .row
                 .col-sm-12.text-center
-                    h1.pt-5 404
-                    h2.py-5.text-muted Whoops, that page does not exist!
+                  h1.pt-3 404
+                  .pt-4
+                    img.mb-2(src='/images/404_ghibli.gif', alt='cute studio Ghibli animated GIF')
+                    small.text-muted.d-block GIF from "My Neighbor Totoro", 1998, Studio Ghibli
+                  h3.py-3.text-muted.mb-5 Whoops, that page does not exist!
     include partials/footer.pug
