--- a/src/layouts/pricing/list.pug
+++ b/src/layouts/pricing/list.pug
@@ -66,8 +66,8 @@ body
                         .text-center
                             ul.list-inline.plans-features-common-list
                                 li.list-inline-item 8 regions
-                                li.list-inline-item 1 minute resolution for API checks / 5 resolution for Browser checks
-                                li.list-inline-item 1 public dashboard with a custom domain
+                                li.list-inline-item 1m interval for API checks / 5m interval for Browser checks
+                                li.list-inline-item 1 public dash with a custom domain
                                 li.list-inline-item SSL expiration checks
                                 li.list-inline-item Pagerduty, SMS, email, webhook and Slack integration
                                 li.list-inline-item Weekly summary email
