feat: adds news

--- a/src/layouts/pricing/list.pug
+++ b/src/layouts/pricing/list.pug
@@ -21,6 +21,8 @@ body
                                         td 5 Browser checks
                                     tr
                                         td 5 Team members
+                                    tr
+                                        td 50 SMS credits
                                 .price-block
                                     span.dollar-sign $
                                     span.price 15
@@ -37,6 +39,8 @@ body
                                         td 15 Browser checks
                                     tr
                                         td 10 Team members
+                                    tr
+                                      td 150 SMS credits
                                 .price-block
                                     span.dollar-sign $
                                     span.price 40
@@ -54,6 +58,8 @@ body
                                         td 30 Browser checks
                                     tr
                                         td 20 Team members
+                                    tr
+                                      td 300 SMS credits
                                 .price-block
                                     span.dollar-sign $
                                     span.price 80
