fix: minor tweaks

--- a/src/layouts/partials/api-monitoring-section.pug
+++ b/src/layouts/partials/api-monitoring-section.pug
@@ -9,7 +9,7 @@ section.api-monitoring-section
             | Make sure your API endpoints are always responding quickly and with the correct payload. Get started quickly
             | with our Swagger or cURL importer and super easy API check creator.
             | <br><br>
-            | Run your checks from up to 8 locations on the world, as often as once every minute. And we'll also check if
+            | Run your checks from up to 8 locations, as often as once every minute. And we'll also check if
             | your SSL certificate is about to expire.
           a.cta-link(href='/docs/api-checks/request-settings/') Learn more
       .col-sm-6.offset-sm-1
