--- a/src/scss/sections/_public-stats.scss
+++ b/src/scss/sections/_public-stats.scss
@@ -1,6 +1,7 @@
 @import '../variables';
 
 .public-stats-section {
+  text-align: center;
   padding-top: 3 * $spacer;
   padding-bottom: 4 * $spacer;
 
@@ -14,5 +15,8 @@
     margin: .5rem;
     font-size: larger;
     font-weight: 500;
+  }
+  @include media-breakpoint-down(sm) {
+    text-align: left;
   }
 }
