--- a/src/scss/_sections.scss
+++ b/src/scss/_sections.scss
@@ -13,11 +13,11 @@ section {
     font-family: sans-serif;
     letter-spacing: 1.2px;
     color: $gray;
-    border-bottom: 5px solid $gray-light;
-    padding-bottom: 1rem;
+    border-bottom: 2px solid $gray-light;
+    padding-bottom: .8rem;
     font-size: .7rem;
     text-transform: uppercase;
-    margin-bottom: 1rem;
+    margin-bottom: .6rem;
     display: inline-block;
   }
 
