--- a/src/layouts/partials/head.pug
+++ b/src/layouts/partials/head.pug
@@ -8,12 +8,15 @@ html(lang='en')
 
         meta(property='og:type' content='article')
         meta(property='og:title' content='{{ if .IsHome }}{{ .Site.Title }}{{ else }}{{ .Title }} | Checkly {{ end }}')
-        meta(property='og:description' content='{{.Description | default .Site.Params.Description}}')
-        meta(property='og:image' content='https://checklyhq.com/images/dashboard-screen@2x.png')
+        meta(property='og:description' content='{{ with .Description }}{{ . }}{{ else }}{{if .IsPage}}{{ .Summary }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}{{ end }}')
+        //meta(property='og:image' content='https://checklyhq.com/images/dashboard-screen@2x.png')
+        meta(property='og:type' content='{{ if .IsPage }}article{{ else }}website{{ end }}')
+
+        meta(property='og:image' content='{{ if .IsPage }}{{ with .Params.featured_image }}{{ . }}{{end}}{{ else}}https://checklyhq.com/images/dashboard-screen@2x.png{{end}}')
 
         meta(property='twitter:card' content='summary')
         meta(property='twitter:title' content='{{ if .IsHome }}{{ .Site.Title }}{{ else }}{{ .Title }} | Checkly {{ end }}')
-        meta(property='twitter:description' content='{{.Description | default .Site.Params.Description}}')
+        meta(property='twitter:description' content='{{ with .Description }}{{ . }}{{ else }}{{if .IsPage}}{{ .Summary }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}{{ end }}')
         meta(property='twitter:image' content='https://checklyhq.com/images/dashboard-screen@2x.png')
 
         link(rel='icon' type='image/png' href='/images/racoon_favicon.png')
