docs: adds news items

--- a/src/layouts/whats-new/single.pug
+++ b/src/layouts/whats-new/single.pug
@@ -18,4 +18,5 @@ body
                         .article-body
                             span.markdown #{'{{ .Content }}'}
 
+    include ../partials/free-trial-row
     include ../partials/footer.pug
