refactor: optimize images

--- a/src/layouts/partials/all-features.pug
+++ b/src/layouts/partials/all-features.pug
@@ -29,7 +29,7 @@ section.all-features-section
         p Display a <a href='/docs/dashboards/' class="info-link">public dashboard</a> on your site or in-office mounted TV, hosted on your company domain.
       .col-sm-4
         h5 Teams & users
-        p Add team members to your account to collaborate. Comes with full role based access control.
+        p <a href='/docs/teams/' class="info-link">Add team members to your account to collaborate</a>. Comes with full role based access control.
       .col-sm-4
         h5 On-demand triggers
         p <a href='/docs/browser-checks/triggers/' class="info-link">Trigger your checks</a> using a simple cURL command from your CI/CD pipeline or just the command line.
