--- a/src/layouts/partials/footer.pug
+++ b/src/layouts/partials/footer.pug
@@ -15,6 +15,8 @@ footer.footer
                         li
                             a(href='https://status.checklyhq.com/' target='_blank') Live dashboard
                             span.green-dot
+                        li
+                          a(href='/puppeteer-recorder') Puppeteer Recorder
 
             .col-sm-2
                 .mb-3.mb-md-0
