--- a/src/scss/_markdown.scss
+++ b/src/scss/_markdown.scss
@@ -16,7 +16,7 @@
   h2 {
     font-size: 1.5rem;
     margin-top: 2.5rem;
-    margin-bottom: 1rem;
+    margin-bottom: 0;
     font-weight: 400;
     border-bottom: 1px solid $gray-light;
     padding-bottom: 1rem;
