--- a/src/layouts/partials/head.pug
+++ b/src/layouts/partials/head.pug
@@ -17,7 +17,7 @@ html(lang='en')
         meta(property='twitter:card' content='summary')
         meta(property='twitter:title' content='{{ if .IsHome }}{{ .Site.Title }}{{ else }}{{ .Title }} | Checkly {{ end }}')
         meta(property='twitter:description' content='{{ with .Description }}{{ . }}{{ else }}{{if .IsPage}}{{ .Summary }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}{{ end }}')
-        meta(property='twitter:image' content='https://checklyhq.com/images/dashboard-screen@2x.png')
+        meta(property='twitter:image' content='{{ if .IsPage }}{{ with .Params.featured_image }}{{ . }}{{end}}{{ else}}https://checklyhq.com/images/dashboard-screen@2x.png{{end}}')
 
         link(rel='icon' type='image/png' href='/images/racoon_favicon.png')
         link(rel='alternate' href='{{ .Permalink }}' hreflang='en-us')
