feat: adds updates to product pages

--- a/src/layouts/partials/site-monitoring-section.pug
+++ b/src/layouts/partials/site-monitoring-section.pug
@@ -7,7 +7,7 @@ section.site-monitoring-section
           img.screen-image.big-landing-image.screenshots.fade-in.lazy.hidden-md-down(src='/landing/browser-screenshots@2x.png')
       .col-lg-5.offset-lg-1.col-sm-12
         .text-side.text-left
-          h5.section-super-header click flow monitoring
+          h5.section-super-header transaction monitoring
           h2.section-header No more broken shopping carts
           p.lead-text
             | Validate your most crucial business transactions like logins, shopping carts and onboardings
@@ -15,4 +15,4 @@ section.site-monitoring-section
             | <br><br>
             | Scripting browser click flows used to suck. Not anymore. Checkly uses a Google's Puppeteer framework to run your
             | flows in a Chrome browser. Tweak your script from your local machine or start with one of our examples.
-          a.cta-link(href='/docs/browser-checks') Learn more
+          a.cta-link(href='/product/transaction-monitoring/') Learn more
