--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -30,6 +30,8 @@ p {
   }
 }
 
+
+
 .cta-link {
   color: $brand-primary;
   font-weight: $font-weight-normal;
@@ -104,6 +106,13 @@ p {
   opacity: 1;
 }
 
+.image-w970 {
+  width: 970px;
+}
+
+.img-w360 {
+  width: 360px;
+}
 
 // Styles
 
