--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -19,6 +19,7 @@
 @import 'status-circle';
 @import 'syntax';
 @import 'blog';
+@import 'product';
 
 @import 'sections/hero';
 @import 'sections/api-monitoring';
