--- a/src/layouts/partials/alerting-section.pug
+++ b/src/layouts/partials/alerting-section.pug
@@ -4,7 +4,7 @@ section.alerting-section
       .col-sm-12.text-center
         h5.section-super-header 🔔 alerting
         h2.section-header.mb-4 Alerting without limits
-        img.alerting-options-image.mb-4(src='/landing/alerting-options.png')
+        img.img-w360.mb-4(src='/landing/alerting-options@2x.png')
       .col-sm-12.col-md-8.offset-md-2.text-center
         p.lead-text
           | Keep your team up to date with a generous helping of SMS messages and unlimited email, Pagerduty, Slack and web hook
