feat: adds product menu items

--- a/src/layouts/partials/footer.pug
+++ b/src/layouts/partials/footer.pug
@@ -4,10 +4,14 @@ footer.footer
             .col-sm-2
                 .mb-3.mb-md-0
                     img(src='/images/text_racoon_logo.svg' width='100px')
-            .col-sm-2
+            .col-sm-3
                 .mb-3.mb-md-0
                     h6 Product
                     ul
+                        li
+                          a(href='/product/api-monitoring/') API monitoring
+                        li
+                          a(href='/product/transaction-monitoring/') Transaction monitoring
                         li
                             a(href='/pricing') Pricing
                         li
@@ -30,7 +34,7 @@ footer.footer
                             a(href='/support') Support
                         li
                             a(href='/privacy') Privacy policy
-            .col-sm-6
+            .col-sm-5
                 h6 Get on topic product info and updates
                 #mc_embed_signup
                     form.form-inline(action="https://run.us15.list-manage.com/subscribe/post?u=9af9712f622c6511cb2113669&amp;id=adb061483c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate)
