--- a/src/layouts/partials/navbar.pug
+++ b/src/layouts/partials/navbar.pug
@@ -8,11 +8,13 @@ nav.navbar.navbar-toggleable-md.fixed-top
           img(src='/images/text_racoon_logo.svg', width='120')
         #navbarSupportedContent.collapse.navbar-collapse
           ul.navbar-nav.ml-auto
+            li.nav-item.dropdown
+              a.nav-link.dropdown-toggle(data-toggle='dropdown', id='navbarDropdownMenuLink', href='#') Product
+              .dropdown-menu.big-drop-shadow
+                a.dropdown-item(href='/product/api-monitoring/') API Monitoring
+                a.dropdown-item(href='/product/transaction-monitoring/') Transaction Monitoring
             li.nav-item
               a.nav-link(href='/pricing') Pricing
-            li.nav-item
-              a.nav-link(href='https://status.checklyhq.com/' target='_blank') Live dashboard
-                span.green-dot
             li.nav-item
               a.nav-link(href='/docs') Docs
             li.nav-item
